update model test